objects/Opportunity_Status__c.object
<CustomObject>
    <fields>
        <fullName>Action_Solution__c</fullName>
        <label>Action/Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_in_Detail__c</fullName>
        <label>Comments in Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Next_Step_Due_Date__c</fullName>
        <label>Next Step Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <inlineHelpText>The next action you will take on this Opportunity.</inlineHelpText>
        <label>Next Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
                <value>
                    <fullName>DataSheet/Technical Docs</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Product Review</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Health__c</fullName>
        <inlineHelpText>Green (Close Date on Track)
Yellow (Close Date At Risk)
Red (Close Date Delayed/Changed)</inlineHelpText>
        <label>Opportunity Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green (On Track)</fullName>
                </value>
                <value>
                    <fullName>Yellow (At Risk for Delay)</fullName>
                </value>
                <value>
                    <fullName>Red (Delayed)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Status Date</label>
        <type>DateTime</type>
    </fields>
    <label>Opportunity Status</label>
    <nameField>
        <label>Status Comment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>